--- a/package.json
+++ b/package.json
@@ -1,1 +1,15 @@
-
+{
+  "name": "gmail-telegram-backend",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "googleapis": "^131.0.0",
+    "node-fetch": "^3.3.2"
+  }
+}
